tests/ui/parser/issues/issue-87217-keyword-order/wrong-unsafe-abi.stderr
error: expected `{`, found keyword `unsafe`
  --> $DIR/wrong-unsafe-abi.rs:9:12
   |
LL | extern "C" unsafe fn test() {}
   |            ^^^^^^ expected `{`

error: aborting due to 1 previous error

